fix chatscreen width on mobile

--- a/src/ui/screens/ChatScreen/ChatFrame/style.css
+++ b/src/ui/screens/ChatScreen/ChatFrame/style.css
@@ -196,10 +196,6 @@
     overflow-y: scroll;
   }
 
-  .mobile-hidden {
-    display: none;
-  }
-
   .chat-frame .chat-header-menu {
     width: 32px;
     padding: 0;
