--- a/src/ui/screens/ChatScreen/style.css
+++ b/src/ui/screens/ChatScreen/style.css
@@ -4,6 +4,7 @@
   display: flex;
   flex: 1;
   height: 100%;
+  max-width: 100%;
 }
 
 .flip-horizontal {
@@ -13,7 +14,7 @@
 
 @media only screen and (max-width: 800px) {
 
-  .mobile-hidden {
+  .no-mobile {
     display: none;
     border-radius: 200px;
   }
